replace sh with using subprocess directly for Windows support

--- a/main.ipynb
+++ b/main.ipynb
@@ -25,7 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sh import git, python\n",
+    "from subprocess import run, PIPE, STDOUT\n",
+    "from shutil import which\n",
+    "import sys\n",
     "from glob import iglob\n",
     "import pandas as pd\n",
     "from io import StringIO\n",
@@ -48,12 +50,47 @@
     }
    ],
    "source": [
+    "def python(*args, **kwargs):\n",
+    "    result = run([sys.executable, *args], text=True, capture_output=True, **kwargs)\n",
+    "    if result.stderr:\n",
+    "        print(result.stderr)\n",
+    "    result.check_returncode()\n",
+    "    return result.stdout\n",
     "print(python(\"--version\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
+   "id": "f65524d6-ca1d-4706-88ca-abe38e01ab8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "commit caedb64f1aebd12fc4391c01bf86fd24b63142ce\n",
+      "Author: Ivan <fizmat.r66@gmail.com>\n",
+      "Date:   Fri Sep 29 22:14:15 2023 +0400\n",
+      "\n",
+      "    sort results directly in sparse matrix internals\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def git(*args, **kwargs):\n",
+    "    result = run([which(\"git\"), *args], text=True, capture_output=True, **kwargs)\n",
+    "    if result.stderr:\n",
+    "        print(result.stderr)\n",
+    "    result.check_returncode()\n",
+    "    return result.stdout\n",
+    "print(git(\"show\", \"-s\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "25499f80-d8b8-4425-af0a-351962ddc5d5",
    "metadata": {},
    "outputs": [],
@@ -105,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "d253651a-da77-40bc-b43f-2652ab166197",
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_times(commit_range, glob, n=N):\n",
     "    data = []\n",
-    "    for i, h in enumerate(git(\"rev-list\", \"--reverse\", commit_range, \"--\", _tty_out=False).splitlines()):\n",
-    "        print(git.checkout(h))\n",
-    "        subj = git.show(\"-s\", \"--format=%s\", _tty_out=False).strip()\n",
+    "    for i, h in enumerate(git(\"rev-list\", \"--reverse\", commit_range, \"--\").splitlines()):\n",
+    "        git(\"checkout\", h)\n",
+    "        subj = git(\"show\", \"-s\", \"--format=%s\").strip()\n",
     "        subj = f\"{i}: {subj:.20}…\"\n",
     "        print(subj)\n",
     "        for f in iglob(glob):\n",
@@ -123,9 +160,9 @@
     "            print(f)\n",
     "            # warm-up\n",
     "            print(python(f))\n",
-    "            print(python(f, _env={\"DETAILED_PYTHON_PERF\": \"1\"}))\n",
+    "            print(python(f, env={\"DETAILED_PYTHON_PERF\": \"1\"}))\n",
     "            # measure\n",
-    "            buf = \"\\n\".join(python(f, _tty_out=False, _env={\"DETAILED_PYTHON_PERF\": \"1\"}).strip() \n",
+    "            buf = \"\\n\".join(python(f, env={\"DETAILED_PYTHON_PERF\": \"1\"}).strip() \n",
     "                            for _ in tqdm(range(n)))\n",
     "            record = pd.read_csv(StringIO(buf), sep=\"\\t\", header=None)\n",
     "            record.columns = k_input_columns(len(record.columns))\n",
